feat: add route validate-token
